--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "main": "index.js",
   "author": "Janaina-Costa <janainacosta.dev@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev -r dotenv/config ./src/server.ts",
+    "build": "tsc",
+    "start": "node -r dotenv/config ./dist/server.js"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "babel-eslint": "^10.1.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -16,6 +23,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "^2.6.2",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
